[gd_scene load_steps=31 format=2]

[ext_resource path="res://Enemies/FireBat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/FireBat.gd" type="Script" id=4]
[ext_resource path="res://Overlap/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://WhiteColorShader.tres" type="Shader" id=10]
[ext_resource path="res://Music and Sounds/Batcry.wav" type="AudioStream" id=11]
[ext_resource path="res://Enemies/EnemyGroupZone.tscn" type="PackedScene" id=12]
[ext_resource path="res://Enemies/StuckChecker.tscn" type="PackedScene" id=13]

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "AnimationFly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 4.0

[sub_resource type="CircleShape2D" id=9]
radius = 78.678

[sub_resource type="CircleShape2D" id=10]
radius = 5.0

[sub_resource type="CircleShape2D" id=11]
radius = 4.71405

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="Animation" id=15]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=22]
resource_name = "Explode"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "get_bigger"
} ]
}

[sub_resource type="CircleShape2D" id=28]
radius = 96.8963

[node name="RustBat" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 16
script = ExtResource( 4 )
KNOCKBACK_FORCE = 20
FLY_DRAG = 160
MAX_SPEED = 30
SOFT_COLLISION_FORCE = 600
ATTACK_INSTANCES = 2
WAVE_DELAY = 0.4
CR_VALUE = 10
mySoulSprite = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 12 )
position = Vector2( 0, -14 )
frames = SubResource( 6 )
animation = "AnimationFly"
frame = 2
playing = true

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 5

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 0, 1, 0.278431 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 0.917647, 0.721569, 0.054902, 1 )
position = Vector2( 0, -18 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/Start = SubResource( 14 )
anims/Stop = SubResource( 15 )

[node name="FireballSpawnPoint" type="Position2D" parent="."]
visible = false
position = Vector2( 3.33333, -17.3333 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="AttackCD" type="Timer" parent="."]

[node name="DeathDealy" type="Timer" parent="."]

[node name="AnimationPlayerExplode" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 22 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
pitch_scale = 1.3
bus = "SFX"

[node name="EnemyGroupZone" parent="." instance=ExtResource( 12 )]
visible = false

[node name="CollisionShape2D" parent="EnemyGroupZone" index="0"]
shape = SubResource( 28 )

[node name="StuckChecker" parent="." instance=ExtResource( 13 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="AttackCD" to="." method="_on_AttackCD_timeout"]
[connection signal="timeout" from="DeathDealy" to="." method="_on_DeathDealy_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
[editable path="EnemyGroupZone"]
